--- a/html_css/simple_website/index.html
+++ b/html_css/simple_website/index.html
@@ -11,9 +11,13 @@
         <h1>Willkommen aud der Webseite</h1>
     </header>
     <section>
-        <p>Moin Moin von unserer einfache website</p>
-        <div class="box">
+        <div class="box">  
             <p>Gestylte Box Box</p>
+
+    
+            
+         <p>Follow Always sunny in Philadelfia</p>
+        <img src=C:\Users\xmatz\Downloads\Etzga-1XUAM23oZ-1200x900.jpeg>
         </div>
     </section>
 </body>
