--- a/html_css/simple_website/index.html
+++ b/html_css/simple_website/index.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Einfache Webseite mit HTML</title>
 </head>
+
 <body>
   <header>
     <h1>Charlys Fun Page</h1>
   </header>
-      <img src="C:\Users\xmatz\Downloads\Etzga-1XUAM23oZ-1200x900.jpeg" alt="Image description">
- </div>
-      <iframe width="1236" height="695" src="https://www.youtube.com/embed/suELab4zdbU" title="It&#39;s Always Sunny In Philadelphia | Charlie Kelly’s Top Moments | FXX" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <img src="C:\Users\xmatz\Downloads\Etzga-1XUAM23oZ-1200x900.jpeg" alt="Image description">
+  </div>
+  <iframe width="1236" height="695" src="https://www.youtube.com/embed/suELab4zdbU"
+    title="It&#39;s Always Sunny In Philadelphia | Charlie Kelly’s Top Moments | FXX" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen></iframe>
   <div class="box">
     <p>Gestylte Box Box</p>
     <header>
       <h1>Follow Always sunny in Philadelfia</h1>
-    </header>      
-      <div class="Box">
-        <p>Gestylte Box Box</p>
-        <header>
-            <h1>Linux Essentials Cerfitifcation Exam Test</h1>
-          </header> 
-
     </header>
-  <iframe name='proprofs' id='proprofs' width='950' height='1250' frameborder=0 marginwidth=0 marginheight=0 src='https://www.proprofs.com/quiz-school/story.php?title=mtq1mtq2oqtx8h&ew=430'></iframe>
+    <div class="Box">
+      <p>Gestylte Box Box</p>
+      <header>
+        <h1>Linux Essentials Cerfitifcation Exam Test</h1>
+      </header>
 
-  <div style='font-size:10px; font-family:Arial, Helvetica, sans-serif; text-align:left;'>
-    <a href='https://www.proprofs.com/quiz-school/' title='ProProfs Online Quiz Creator' target='_blank'>ProProfs Online Quiz Creator</a>
-  </div>
+      </header>
+      <iframe width="80%" height="500"
+        src='https://www.proprofs.com/quiz-school/story.php?title=mtq1mtq2oqtx8h&ew=430'></iframe>
 
+      
 </body>
+
 </html>
