--- a/html_css/insta_flewx/index.html
+++ b/html_css/insta_flewx/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="navbar">
-        <a class="home"> <b><u>Home</b></u> </a>
+        <a class="home"> <b><u>Finstergramm</b></u> </a>
         <div class="doppelfrosch">
             <a class="anmelden"> <b><u>Anmelden</b></u> </a>
             <a class="registrieren"> <b><u>Registrieren</b></u> </a>
