--- a/html_css/simple_website/index.html
+++ b/html_css/simple_website/index.html
@@ -14,10 +14,7 @@
   </header>
   <img src="C:\Users\xmatz\Downloads\Etzga-1XUAM23oZ-1200x900.jpeg" alt="Image description">
   </div>
-  <iframe width="1236" height="695" src="https://www.youtube.com/embed/suELab4zdbU"
-    title="It&#39;s Always Sunny In Philadelphia | Charlie Kelly’s Top Moments | FXX" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    allowfullscreen></iframe>
+  <iframe width="853" height="480" src="https://www.youtube.com/embed/GEBTFBxfxm4" title="The Best Always Sunny Memes | It’s Always Sunny In Philadelphia | FX" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   <div class="box">
     <p>Gestylte Box Box</p>
     <header>
@@ -31,7 +28,7 @@
 
       </header>
       <iframe width="80%" height="500"
-        src='https://www.proprofs.com/quiz-school/story.php?title=mtq1mtq2oqtx8h&ew=430'></iframe>
+        src='https://youtu.be/GEBTFBxfxm4'></iframe>
 
       
 </body>
