--- a/html_css/eigenes finstergramm/index.html
+++ b/html_css/eigenes finstergramm/index.html
@@ -58,7 +58,7 @@
                 <iframe width="300" height="300" src="https://www.youtube.com/embed/TzaVd6zl2bA" title="Dayman" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <iframe width="300" height="300" src="https://www.youtube.com/embed/FLzDttETzSU" title="It&#39;s Always Sunny - Lethal Weapon 6 Basketball Scene" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <img class="gallery-img" src="https://static.wikia.nocookie.net/villains/images/9/99/IASIP_gang.jpeg/revision/latest?cb=20201025101242">
-                <img class="gallery-img" src="./jfif/cat2.jfif">
+                <img class="gallery-img" src="C:\Users\xmatz\OneDrive\Dokumente\GitHub\web-development\web-development\html_css\eigenes finstergramm\jfif\79afe324-1dfb-4979-901d-092eff6dfe06_text.gif">
             </div>
             <div class="column">
                 <img class="gallery-img" src="./jfif/cat2.jfif">
