new login sign in botten

--- a/html_css/eigenes finstergramm/index.html
+++ b/html_css/eigenes finstergramm/index.html
@@ -12,8 +12,8 @@
                 <img class="logo" src="./svg/Finstergram.svg">
             </a>
             <div class="nav-buttons">
-                <a class="anmelden" href="http://127.0.0.1:5500/html_css/finstergram/index.html"> anmelden </a>
-                <a class="registrieren" href="http://127.0.0.1:5500/html_css/finstergram/index.html"> registrieren </a>
+                <a class="anmelden" href="C:\Users\xmatz\OneDrive\Dokumente\GitHub\web-development\html_css\eigenes finstergramm\login.html"> anmelden </a>
+                <a class="registrieren" href="C:\Users\xmatz\OneDrive\Dokumente\GitHub\web-development\html_css\eigenes finstergramm\sign_up.html"> registrieren </a>
             </div>
         </nav>
         <div class="flexbox">
